[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://art/bubble.png" type="Texture" id=7]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 6.41371, 0, 0, Vector2( 0.327044, 0.820552 ), 0.0, 0.0, 0, 0, Vector2( 0.496855, 0.752984 ), 0.0, 0.0, 0, 0, Vector2( 0.676101, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -6.46923, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 240, 360, 1 )
flag_disable_z = true
gravity = Vector3( 0, -49, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 10.0
tangential_accel_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 2 )

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.124936, 0.512433, 0.664062, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BubbleField" type="Particles2D" parent="."]
position = Vector2( 240, 360 )
lifetime = 6.0
preprocess = 6.0
process_material = SubResource( 3 )
texture = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
